# Qt-Light-OpenGL

./: CMakeLists.txt
src/: CMakeLists.txt  lighting.cpp
